--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,3 +1,4 @@
 include README.md LICENSE
 recursive-include knockout *.py *.html
 recursive-include knockout/templates *
+recursive-include knockout/static *
